# walletwall-vault

./: .dockerignore  .env.example  .gitignore  .prettierrc.json  .solhint.json  Dockerfile  Project_Phases.md  README.md  SECURITY.md  docker-compose.droplet.yml  docker-compose.yml  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
contracts/: IPQCVerifier.sol  IPQSignatureVerifier.sol  IPolicyEngine.sol  MLDSAVerifier.sol  MockMLDSAVerifier.sol  SignatureVerifier.sol  StablecoinVaultSimulator.sol  WalletWallMultiSigVault.sol  WalletWallVault.sol
deployments/: README.md
docs/: ACVP_Guest_Results.md  Architecture_Transition.md  Attestation_Governance_Hardening.md  Attestation_Verifier.md  DIGITALOCEAN_DEPLOYMENT.md  Deployments.md  Hosted_Evidence_Endpoint_Deployment_Plan.md  Hosted_Evidence_Endpoint_Target_Decision.md  Hosted_Verifier_Demo_Spike.md  Local_Playground.md  ML_DSA_Evidence_Manifest.md  Migration_Guide.md  Open_PQ_Verifier.md  Operator_Checklist_Simulator.md  PQ_Proof_Artifact.md  PQ_Verifier_Evidence_Artifact.md  PQ_Verifier_Operator_Guide.md  PQ_Verifier_Reproducibility.md  Phase_3_Status.md  ROADMAP.md  Rust_Evidence_Tooling_Scaffold.md  Rust_Evidence_Validator_Contract_Expansion.md  Rust_Evidence_Validator_Etag_Parity.md  Rust_Implementation_Path.md  SP1_Proof_Input.md  SP1_Smoke_Lane.md  Security_Assumptions.md  Sepolia_Rehearsal_Operator_Path.md  Static_Hosted_Evidence_Artifact.md  Static_Hosted_Evidence_Publish_Workflow.md  Static_Hosted_Evidence_Publishing_Controls.md  TESTING.md  THREAT_MODEL.md  Verifier_Result_Schema.md  Verifier_Roadmap.md  WALLETWALL_APP_BOUNDARY.md  ZK_Adapter_Evidence_Endpoint.md  ZK_PQ_Status_Matrix.md  ZK_Prover_Runbook.md  ZK_Verifier_Adapter_Boundary.md  (+5 more)
pqc/: ml-dsa.ts  pqc-signer.ts  pqc-verifier.ts
scripts/: attestor-cli.ts  demo-local.ts  demo-sign-attestation-unsafe.ts  demo-simulator.ts  deploy-entrypoint.sh  deploy-simulator.ts  deploy-zk-verifier.ts  deploy.ts  generate-attestor-fixture.ts  generate-evidence-fixture.ts  generate-mldsa-evidence-manifest.ts  generate-proof-artifact.ts  generate-sp1-proof-input.ts  generate-static-evidence-artifact.ts  generate-zk-adapter-evidence-response.ts  generate-zk-verifier-adapter.ts  hosted-verifier-demo.ts  pq-verifier-cli.ts  prepare-static-evidence-publish.ts  propose-verifier-update.ts  prover-client.ts  recovery-playground.ts  sign-attestation.ts  sp1-smoke.ts  validate-deployments.ts  validate-reproducibility.ts
src/verifier/: result.ts  (+3 more)
test/: AdaptiveMermaidDocs.test.ts  AdvancedSecurity.test.ts  AttestationPQCVerifier.test.ts  AttestorCli.test.ts  CompositePolicyEngine.test.ts  DeploymentEnvChainConsistency.test.ts  DeploymentMetadata.test.ts  DeploymentReproducibility.test.ts  DocsBoundary.test.ts  DocsDisclaimerCoverage.test.ts  HostedEvidenceEndpointDeploymentPlan.test.ts  HostedEvidenceEndpointTargetDecision.test.ts  HostedVerifierDemo.test.ts  LargeTxTimelock.test.ts  MLDSAConformance.test.ts  MLDSAEvidenceManifest.test.ts  MLDSAVectorCoverage.test.ts  MockUSDC.test.ts  PQAlgorithmRegistry.test.ts  PQEvidence.test.ts  PQProofArtifact.test.ts  PQVerifier.test.ts  PQVerifierBoundary.test.ts  PQVerifierCli.test.ts  PolicyEngine.test.ts  RustEvidenceToolingScaffold.test.ts  RustEvidenceValidatorContractExpansion.test.ts  RustEvidenceValidatorEtagParity.test.ts  RustImplementationPath.test.ts  SP1ProofInput.test.ts  SP1Smoke.test.ts  SanctionsPolicy.test.ts  StablecoinVaultSimulator.test.ts  StaticHostedEvidenceArtifact.test.ts  StaticHostedEvidencePublishWorkflow.test.ts  StaticHostedEvidencePublishingControls.test.ts  TreasuryQuorum.test.ts  WalletWallVault.test.ts  WalletWallVaultCreation.test.ts  ZKAcvpGuest.e2e.test.ts  (+6 more)
zkvm/evidence-validator/: Cargo.toml  README.md
zkvm/evidence-validator/fixtures/: zk-adapter-evidence-response.invalid-adapter-missing-identity.json  zk-adapter-evidence-response.invalid-adapter-wrong-identity.json  zk-adapter-evidence-response.invalid-bad-etag.json  zk-adapter-evidence-response.invalid-bad-timestamp.json  zk-adapter-evidence-response.invalid-empty-etag.json  zk-adapter-evidence-response.invalid-empty-limitations.json  zk-adapter-evidence-response.invalid-etag-mismatch.json  zk-adapter-evidence-response.invalid-etag-noncanonical-order.json  zk-adapter-evidence-response.invalid-etag-stale-adapter.json  zk-adapter-evidence-response.invalid-etag-uppercase.json  zk-adapter-evidence-response.invalid-malformed-adapter.json  zk-adapter-evidence-response.invalid-malformed-json.json  zk-adapter-evidence-response.invalid-missing-etag.json  zk-adapter-evidence-response.invalid-missing-limitations.json  zk-adapter-evidence-response.invalid-missing-regeneration.json  zk-adapter-evidence-response.invalid-status-ok-mismatch.json  zk-adapter-evidence-response.invalid-unknown-field.json  zk-adapter-evidence-response.invalid-wrong-schema.json  zk-adapter-evidence-response.invalid-wrong-service.json  zk-adapter-evidence-response.invalid-wrong-status.json  zk-adapter-evidence-response.valid.json
zkvm/evidence-validator/src/: lib.rs  main.rs
zkvm/guest/: Cargo.toml
zkvm/guest/src/: main.rs
zkvm/host/: Cargo.toml  build.rs
zkvm/host/src/: main.rs
(+86 files in other folders)
