# Offline, deterministic evidence-shape validator — Phase 1 Rust scaffold.
#
# SCAFFOLD / OFFLINE ONLY. This crate reads a committed evidence JSON artifact
# from disk and checks its deterministic SHAPE against the
# `walletwall.zk-adapter-evidence-response.v1` response contract. It performs NO
# network I/O, NO prover execution, NO SP1 SDK build, NO signing, NO key access,
# and NO chain access. It makes NO cryptographic truth claim — in particular it
# does NOT recompute or verify the keccak256 `etag`; that cross-check stays with
# the TypeScript `validate:zk-response` pass.
#
# See docs/Rust_Evidence_Tooling_Scaffold.md and Phase 1 of
# docs/Rust_Implementation_Path.md.
#
# Dependency convention mirrors zkvm/guest and zkvm/host: serde-family crates use
# caret minor pins. This crate intentionally pulls in NO SP1, cryptography, HTTP,
# or other network/prover dependencies — only serde + serde_json for strict typed
# JSON parsing.
[package]
name = "evidence-validator"
version = "0.2.0"
edition = "2021"
publish = false
description = "Offline, deterministic contract-shape validator for committed walletwall evidence artifacts (Phase 1 scaffold + contract expansion)."
license = "MIT"

[lib]
name = "evidence_validator"
path = "src/lib.rs"

[[bin]]
name = "evidence-validator"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
