[package]
name = "mldsa65-guest"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git", tag = "v4.0.0-rc.3" }
mldsa = { git = "https://github.com/nazar-pc/mldsa", branch = "main" }
sha2 = "0.10"
sha3 = "0.10"
serde = { version = "1.0", features = ["derive"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }

[patch.crates-io]
# Patches if needed for zkVM compatibility
